2005-02-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* share.pl.in: avoid print$ section as well in smb.conf, it has much
	more to do with printing than with file sharing

2005-02-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in: added "set_gateway" directive

2005-02-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: patch with lots of help and testing
	from Michael Vogt <mvogt@acm.org> to fix PPP calling in the network
	tool. this should fix #167342

2005-02-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* process.pl.in: added for basic process management
	* Makefile.am, configure.in: added process.pl

2005-02-13  Michael Vogt  <mvogt@acm.org>

	* network.pl.in (gst_network_enable_isdn): made it really work with
	ISDN

2005-02-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* general.pl.in: added stupid missing function in i18n initialization.
	Fixes #167095
	* xml.pl.in: cosmetic fix

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.91

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: added some extra stability to the dhclient call in
	enable_iface_with_config, made it truly return whether it has failed

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* configure.in: small fix to make it compile separatedly, now that the
	backend is divided from the frontend

2005-02-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: made a string more user-frienly (Ole Laursen's
	suggestion). Fixes #166330

2005-02-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: Only add an empty ppp0 interface if it wasn't added
	before and pppd exists

2005-01-31  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: detect whether to use md5 or not from the pam setup.
	Fixes #161269. Removed default groups from all distros

2005-01-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* time-conf.in: update the correct server status in debian
